--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   </head>
 
   <body>
+    <header>
+        <h1>Weather Dashboard</h1>
+    </header>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
