Adds a div to body for searching city and search button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
     <header>
         <h1>Weather Dashboard</h1>
     </header>
+
+    <div>
+        <h3>Search for a City:</h3>
+        <input type="text">
+        <button>Search</button>
+    </div>
+
     
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
