Creates divs for where city info will display, and area for 5 day forecast will display. Also adds comments to html

--- a/index.html
+++ b/index.html
@@ -29,14 +29,35 @@
         <h1>Weather Dashboard</h1>
     </header>
 
+<!-- Area to search for city and show previous cities -->
     <div>
         <h3>Search for a City:</h3>
         <input type="text">
         <button>Search</button>
     </div>
 
-    
+<!-- Area for selected city weather info -->
+    <div>
+        <h3></h3>
+        <p>Temp:</p>
+        <p>Wind:</p>
+        <p>Humidity:</p>
+    </div>
 
+<!-- Area for 5-Day Forecast -->
+    <div>
+        <h3>5-Day Forecast:</h3>
+    </div>
+    <div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
