--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>5 Day Forecast Weather Dashboard</title>
+    <title>Weather Dashboard</title>
   </head>
 
   <body>
