Adds class of container to two elements in html, centered header text, and adds col class to two elements in divs

--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
   </head>
 
   <body>
-    <header>
+    <header class="container text-center">
       <h1>Weather Dashboard</h1>
     </header>
 
     <div class="container">
       <!-- Area to search for city and show previous cities -->
-      <div>
+      <div col-3>
         <h3>Search for a City:</h3>
         <input type="text" />
         <button>Search</button>
       </div>
 
       <!-- Area for selected city weather info -->
-      <div>
+      <div col-9>
         <h3></h3>
         <p>Temp:</p>
         <p>Wind:</p>
