Adds a placeholder to text input area

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Area to search for city and show previous cities -->
       <div col-3>
         <h3>Search for a City:</h3>
-        <input type="text" />
+        <input type="text" placeholder="Seattle" />
         <button>Search</button>
       </div>
 
