Adds missing class= with quotes to col

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
     <div class="container">
       <!-- Area to search for city and show previous cities -->
-      <div col-3>
+      <div class="col-3">
         <h3>Search for a City:</h3>
         <input type="text" placeholder="Seattle" />
         <button>Search</button>
       </div>
 
       <!-- Area for selected city weather info -->
-      <div col-9>
+      <div class="col-9">
         <h3></h3>
         <p>Temp:</p>
         <p>Wind:</p>
