--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
     <div class="container">
       <!-- Area to search for city and show previous cities -->
-      <div class="col-3">
+      <div class="col-3 bg-primary">
         <h3>Search for a City:</h3>
         <input type="text" placeholder="Seattle" />
         <button>Search</button>
       </div>
 
       <!-- Area for selected city weather info -->
-      <div class="col-9">
+      <div class="col-9 bg-primary">
         <h3></h3>
         <p>Temp:</p>
         <p>Wind:</p>
@@ -46,15 +46,15 @@
       </div>
 
       <!-- Area for 5-Day Forecast -->
-      <div>
+      <div class="col-12 bg-primary">
         <h3>5-Day Forecast:</h3>
       </div>
-      <div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+      <div class="row">
+        <div class="col-2 bg-secondary">Day</div>
+        <div class="col-2 bg-secondary">Day</div>
+        <div class="col-2 bg-secondary">Day</div>
+        <div class="col-2 bg-secondary">Day</div>
+        <div class="col-2 bg-secondary">Day</div>
       </div>
     </div>
 
