Puts links to bootstrap reference in README, adds fluid to container class in html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h1>Weather Dashboard</h1>
     </header>
 
-    <div class="container">
+    <div class="container-fluid">
       <!-- Area to search for city and show previous cities -->
       <div class="col-3 bg-primary">
         <h3>Search for a City:</h3>
