Adds ids to selected city div, writes js code for important dom hooks for html elements

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
       <!-- Area for selected city weather info -->
       <div class="col-9 bg-primary">
-        <h3></h3>
-        <p>Temp:</p>
-        <p>Wind:</p>
-        <p>Humidity:</p>
+        <h3 id="current-city"></h3>
+        <p id="temperature">Temp:</p>
+        <p id="wind">Wind:</p>
+        <p id="humidity">Humidity:</p>
       </div>
 
       <!-- Area for 5-Day Forecast -->
