--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
       </div>
 
       <!-- Area for 5-Day Forecast -->
-      <div class="col-12 bg-primary">
+      <div class="col-12 bg-primary row">
         <h3>5-Day Forecast:</h3>
       </div>
       <div class="row">
-        <div class="col-2 bg-secondary">Day</div>
-        <div class="col-2 bg-secondary">Day</div>
-        <div class="col-2 bg-secondary">Day</div>
-        <div class="col-2 bg-secondary">Day</div>
-        <div class="col-2 bg-secondary">Day</div>
+        <div class="col-2 bg-secondary m-1">Day</div>
+        <div class="col-2 bg-secondary m-1">Day</div>
+        <div class="col-2 bg-secondary m-1">Day</div>
+        <div class="col-2 bg-secondary m-1">Day</div>
+        <div class="col-2 bg-secondary m-1">Day</div>
       </div>
     </div>
 
