Uses bootstrap to add class to header

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
   </head>
 
   <body>
-    <header class="container text-center">
+    <header class="container text-center p-2 bg-success text-white">
       <h1>Weather Dashboard</h1>
     </header>
 
     <div class="container-fluid">
       <!-- Area to search for city and show previous cities -->
-      <div class="col-3 bg-primary">
+      <div class="col-3 row bg-primary">
         <h3>Search for a City:</h3>
         <input type="text" placeholder="Seattle" />
         <button>Search</button>
