Adds link about bootstrap cards to readme and adds card attribute to city weather element in html

--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
       </div>
 
       <!-- Area for selected city weather info -->
-      <div class="col-9 bg-primary">
-        <h3 id="current-city"></h3>
-        <p id="temperature">Temp:</p>
-        <p id="wind">Wind:</p>
-        <p id="humidity">Humidity:</p>
+      <div class="col-9 bg-primary card">
+        <div class="card-body">
+          <h3 id="current-city"></h3>
+          <p id="temperature">Temp:</p>
+          <p id="wind">Wind:</p>
+          <p id="humidity">Humidity:</p>
+        </div>
       </div>
 
       <!-- Area for 5-Day Forecast -->
