--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
 
       <!-- Area for selected city weather info -->
-      <div class="col-9 bg-primary card">
+      <div class="col-9 card">
         <div class="card-body">
           <h3 id="current-city"></h3>
           <p id="temperature">Temp:</p>
