--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <!-- Area to search for city and show previous cities -->
       <div class="col-3 row bg-primary">
         <h3>Search for a City:</h3>
-        <input type="text" placeholder="Seattle" />
-        <button>Search</button>
+        <input id="search-city" type="text" placeholder="Seattle" />
+        <button id="search-button">Search</button>
       </div>
 
       <!-- Area for selected city weather info -->
