Adds new div to search element for where past cities will be put, adds a corresponding variable in js

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <h3>Search for a City:</h3>
         <input id="search-city" type="text" placeholder="Seattle" />
         <button id="search-button">Search</button>
+        <div id="past-cities"></div>
       </div>
 
       <!-- Area for selected city weather info -->
