Added var in js and id in html for todaysweather

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <!-- Area for selected city weather info -->
       <div class="col-9 card">
-        <div class="card-body">
+        <div class="card-body" id="todays-weather">
           <h3 id="current-city"></h3>
           <p id="temperature">Temp:</p>
           <p id="wind">Wind:</p>
