Changes placeholder of search area to 'search for a city

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Area to search for city and show previous cities -->
       <div class="col-3 row bg-primary">
         <h3>Search for a City:</h3>
-        <input id="search-city" type="text" placeholder="Seattle" />
+        <input id="search-city" type="text" placeholder="Search for a city" />
         <button id="search-button">Search</button>
         <div id="past-cities"></div>
       </div>
