--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- Area for selected city weather info -->
       <div class="col-9 card">
         <div class="card-body" id="todays-weather">
-          <h3 id="current-city"></h3>
+          <h3 id="current-city">City</h3>
           <p id="temperature">Temp:</p>
           <p id="wind">Wind:</p>
           <p id="humidity">Humidity:</p>
@@ -48,15 +48,8 @@
       </div>
 
       <!-- Area for 5-Day Forecast -->
-      <div class="col-12 bg-primary row">
-        <h3>5-Day Forecast:</h3>
-      </div>
-      <div class="row">
-        <div class="col-2 bg-secondary m-1">Day</div>
-        <div class="col-2 bg-secondary m-1">Day</div>
-        <div class="col-2 bg-secondary m-1">Day</div>
-        <div class="col-2 bg-secondary m-1">Day</div>
-        <div class="col-2 bg-secondary m-1">Day</div>
+      
+       
       </div>
     </div>
 
