--- a/index.html
+++ b/index.html
@@ -48,7 +48,40 @@
       </div>
 
       <!-- Area for 5-Day Forecast -->
-      
+      <div class="col-12 bg-primary row">
+        <h3>5-Day Forecast:</h3>
+      </div>
+      <div class="row">
+        <div class="col-2 bg-secondary m-1">
+          <p id="day1temperature">Temp:</p>
+          <p id="day1wind">Wind:</p>
+          <p id="day1humidity">Humidity:</p>
+        </div>
+        <div class="col-2 bg-secondary m-1">
+          <p id="day2temperature">Temp:</p>
+          <p id="day2wind">Wind:</p>
+          <p id="day2humidity">Humidity:</p>
+        </div>
+        <div class="col-2 bg-secondary m-1">
+          <p id="temperature">Temp:</p>
+          <p id="wind">Wind:</p>
+          <p id="humidity">Humidity:</p>
+        </div>
+        <div class="col-2 bg-secondary m-1">
+          <p id="temperature">Temp:</p>
+          <p id="wind">Wind:</p>
+          <p id="humidity">Humidity:</p>
+        </div>
+        <div class="col-2 bg-secondary m-1">
+          <p id="temperature">Temp:</p>
+          <p id="wind">Wind:</p>
+          <p id="humidity">Humidity:</p>
+        </div>
+        <div class="col-2 bg-secondary m-1">
+          <p id="temperature">Temp:</p>
+          <p id="wind">Wind:</p>
+          <p id="humidity">Humidity:</p>
+        </div>
        
       </div>
     </div>
