Changes ids in html of each p element of 5 day forecast to be individualized by day

--- a/index.html
+++ b/index.html
@@ -63,24 +63,24 @@
           <p id="day2humidity">Humidity:</p>
         </div>
         <div class="col-2 bg-secondary m-1">
-          <p id="temperature">Temp:</p>
-          <p id="wind">Wind:</p>
-          <p id="humidity">Humidity:</p>
+          <p id="day3temperature">Temp:</p>
+          <p id="day3wind">Wind:</p>
+          <p id="day3humidity">Humidity:</p>
         </div>
         <div class="col-2 bg-secondary m-1">
-          <p id="temperature">Temp:</p>
-          <p id="wind">Wind:</p>
-          <p id="humidity">Humidity:</p>
+          <p id="day4temperature">Temp:</p>
+          <p id="day4wind">Wind:</p>
+          <p id="day4humidity">Humidity:</p>
         </div>
         <div class="col-2 bg-secondary m-1">
-          <p id="temperature">Temp:</p>
-          <p id="wind">Wind:</p>
-          <p id="humidity">Humidity:</p>
+          <p id="day5temperature">Temp:</p>
+          <p id="day5wind">Wind:</p>
+          <p id="day5humidity">Humidity:</p>
         </div>
         <div class="col-2 bg-secondary m-1">
-          <p id="temperature">Temp:</p>
-          <p id="wind">Wind:</p>
-          <p id="humidity">Humidity:</p>
+          <p id="day5temperature">Temp:</p>
+          <p id="day5wind">Wind:</p>
+          <p id="day5humidity">Humidity:</p>
         </div>
        
       </div>
