Adds a commented out area of js code to possibly convert date and display it

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <div class="col-9 card">
         <div class="card-body" id="todays-weather">
           <h3 id="current-city">City</h3>
+          <p id="current-date"></p>
           <p id="temperature">Temp:</p>
           <p id="wind">Wind:</p>
           <p id="humidity">Humidity:</p>
