--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <div class="card-body" id="todays-weather">
           <h3 id="current-city">City</h3>
           <p id="current-date"></p>
+          <img id="current-image">
           <p id="temperature">Temp:</p>
           <p id="wind">Wind:</p>
           <p id="humidity">Humidity:</p>
@@ -52,28 +53,43 @@
       <div class="col-12 bg-primary row">
         <h3>5-Day Forecast:</h3>
       </div>
+      <!-- Day 1 -->
       <div class="row">
         <div class="col-2 bg-secondary m-1">
+          <p id="day1date"></p>
+          <img id="imgday1">
           <p id="day1temperature">Temp:</p>
           <p id="day1wind">Wind:</p>
           <p id="day1humidity">Humidity:</p>
         </div>
+        <!-- Day 2 -->
         <div class="col-2 bg-secondary m-1">
+          <p id="day2date"></p>
+          <img id="imgday2">
           <p id="day2temperature">Temp:</p>
           <p id="day2wind">Wind:</p>
           <p id="day2humidity">Humidity:</p>
         </div>
+        <!-- Day 3 -->
         <div class="col-2 bg-secondary m-1">
+          <p id="day3date"></p>
+          <img id="imgday3">
           <p id="day3temperature">Temp:</p>
           <p id="day3wind">Wind:</p>
           <p id="day3humidity">Humidity:</p>
         </div>
+        <!-- Day 4 -->
         <div class="col-2 bg-secondary m-1">
+          <p id="day4date"></p>
+          <img id="imgday4">
           <p id="day4temperature">Temp:</p>
           <p id="day4wind">Wind:</p>
           <p id="day4humidity">Humidity:</p>
         </div>
+        <!-- Day 5 -->
         <div class="col-2 bg-secondary m-1">
+          <p id="day5date"></p>
+          <img id="imgday5">
           <p id="day5temperature">Temp:</p>
           <p id="day5wind">Wind:</p>
           <p id="day5humidity">Humidity:</p>
