Changes div to form in search area, deletes city in h3

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <h3>Search for a City:</h3>
         <input id="search-city" type="text" placeholder="Search for a city" />
         <button id="search-button">Search</button>
-        <div id="past-cities"></div>
+        <form id="past-cities"></form>
       </div>
 
       <!-- Area for selected city weather info -->
       <div class="col-9 card">
         <div class="card-body" id="todays-weather">
-          <h3 id="current-city">City</h3>
+          <h3 id="current-city"></h3>
           <p id="current-date"></p>
           <img id="current-image">
           <p id="temperature">Temp:</p>
