Deletes placeholder p elements in html like temp, wind, etc.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           <h3 id="current-city"></h3>
           <p id="current-date"></p>
           <img id="current-image">
-          <p id="temperature">Temp:</p>
-          <p id="wind">Wind:</p>
-          <p id="humidity">Humidity:</p>
+          <p id="temperature"></p>
+          <p id="wind"></p>
+          <p id="humidity"></p>
         </div>
       </div>
 
@@ -58,41 +58,41 @@
         <div class="col-2 bg-secondary m-1">
           <p id="day1date"></p>
           <img id="imgday1">
-          <p id="day1temperature">Temp:</p>
-          <p id="day1wind">Wind:</p>
-          <p id="day1humidity">Humidity:</p>
+          <p id="day1temperature"></p>
+          <p id="day1wind"></p>
+          <p id="day1humidity"></p>
         </div>
         <!-- Day 2 -->
         <div class="col-2 bg-secondary m-1">
           <p id="day2date"></p>
           <img id="imgday2">
-          <p id="day2temperature">Temp:</p>
-          <p id="day2wind">Wind:</p>
-          <p id="day2humidity">Humidity:</p>
+          <p id="day2temperature"></p>
+          <p id="day2wind"></p>
+          <p id="day2humidity"></p>
         </div>
         <!-- Day 3 -->
         <div class="col-2 bg-secondary m-1">
           <p id="day3date"></p>
           <img id="imgday3">
-          <p id="day3temperature">Temp:</p>
-          <p id="day3wind">Wind:</p>
-          <p id="day3humidity">Humidity:</p>
+          <p id="day3temperature"></p>
+          <p id="day3wind"></p>
+          <p id="day3humidity"></p>
         </div>
         <!-- Day 4 -->
         <div class="col-2 bg-secondary m-1">
           <p id="day4date"></p>
           <img id="imgday4">
-          <p id="day4temperature">Temp:</p>
-          <p id="day4wind">Wind:</p>
-          <p id="day4humidity">Humidity:</p>
+          <p id="day4temperature"></p>
+          <p id="day4wind"></p>
+          <p id="day4humidity"></p>
         </div>
         <!-- Day 5 -->
         <div class="col-2 bg-secondary m-1">
           <p id="day5date"></p>
           <img id="imgday5">
-          <p id="day5temperature">Temp:</p>
-          <p id="day5wind">Wind:</p>
-          <p id="day5humidity">Humidity:</p>
+          <p id="day5temperature"></p>
+          <p id="day5wind"></p>
+          <p id="day5humidity"></p>
         </div>
        
        
