Adds font weight bold class to date elements in html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="col-9 card">
           <div class="card-body" id="todays-weather">
             <h3 id="current-city"></h3>
-            <p id="current-date"></p>
+            <p id="current-date" class="font-weight-bold"></p>
             <img id="current-image" />
             <p id="temperature"></p>
             <p id="wind"></p>
@@ -65,7 +65,7 @@
         <!-- Day 1 -->
         <div class="row">
           <div class="col-2 bg-secondary m-1">
-            <p id="day1date"></p>
+            <p id="day1date" class="font-weight-bold"></p>
             <img id="imgday1" />
             <p id="day1temperature"></p>
             <p id="day1wind"></p>
@@ -73,7 +73,7 @@
           </div>
           <!-- Day 2 -->
           <div class="col-2 bg-secondary m-1">
-            <p id="day2date"></p>
+            <p id="day2date" class="font-weight-bold"></p>
             <img id="imgday2" />
             <p id="day2temperature"></p>
             <p id="day2wind"></p>
@@ -81,7 +81,7 @@
           </div>
           <!-- Day 3 -->
           <div class="col-2 bg-secondary m-1">
-            <p id="day3date"></p>
+            <p id="day3date" class="font-weight-bold"></p>
             <img id="imgday3" />
             <p id="day3temperature"></p>
             <p id="day3wind"></p>
@@ -89,7 +89,7 @@
           </div>
           <!-- Day 4 -->
           <div class="col-2 bg-secondary m-1">
-            <p id="day4date"></p>
+            <p id="day4date" class="font-weight-bold"></p>
             <img id="imgday4" />
             <p id="day4temperature"></p>
             <p id="day4wind"></p>
@@ -97,7 +97,7 @@
           </div>
           <!-- Day 5 -->
           <div class="col-2 bg-secondary m-1">
-            <p id="day5date"></p>
+            <p id="day5date" class="font-weight-bold"></p>
             <img id="imgday5" />
             <p id="day5temperature"></p>
             <p id="day5wind"></p>
