Adds class d-none and js code to hide 5 day forecast area until calling function

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
             </div>
           </div>
 
+        
           <!-- Day 1 -->
-          <div class="row">
+          <div class="row d-none" id="5boxes">
             <div class="col-2 bg-secondary m-1">
               <p id="day1date" class="font-weight-bold"></p>
               <img id="imgday1" />
