--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
               <button id="search-button" type="button">Search</button>
             </div>
           </div>
+          <button id="clear-history-btn" type="button">Clear history</button>
           <form id="past-cities"></form>
         </div>
 
