Changed header class from container to container-fluid to fill screen

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <header class="container text-center p-2 bg-success text-white">
+    <header class="container-fluid text-center p-2 bg-success text-white">
       <h1>Weather Dashboard</h1>
     </header>
 
