Adds card-text and card-body classes to forecast elements in html

--- a/index.html
+++ b/index.html
@@ -74,44 +74,44 @@
         
           <!-- Day 1 -->
           <div class="row d-none" id="5boxes">
-            <div class="col-2 bg-secondary m-2">
-              <p id="day1date" class="font-weight-bold"></p>
+            <div class="col-2 card-body bg-secondary m-2">
+              <p card-text id="day1date" class="font-weight-bold"></p>
               <img id="imgday1" />
-              <p id="day1temperature"></p>
-              <p id="day1wind"></p>
-              <p id="day1humidity"></p>
+              <p card-text id="day1temperature"></p>
+              <p card-text id="day1wind"></p>
+              <p card-text id="day1humidity"></p>
             </div>
             <!-- Day 2 -->
-            <div class="col-2 bg-secondary m-2">
-              <p id="day2date" class="font-weight-bold"></p>
+            <div class="col-2 card-body bg-secondary m-2">
+              <p card-text id="day2date" class="font-weight-bold"></p>
               <img id="imgday2" />
-              <p id="day2temperature"></p>
-              <p id="day2wind"></p>
-              <p id="day2humidity"></p>
+              <p card-text id="day2temperature"></p>
+              <p card-text id="day2wind"></p>
+              <p card-text id="day2humidity"></p>
             </div>
             <!-- Day 3 -->
-            <div class="col-2 bg-secondary m-2">
-              <p id="day3date" class="font-weight-bold"></p>
+            <div class="col-2 card-body bg-secondary m-2">
+              <p card-text id="day3date" class="font-weight-bold"></p>
               <img id="imgday3" />
-              <p id="day3temperature"></p>
-              <p id="day3wind"></p>
-              <p id="day3humidity"></p>
+              <p card-text id="day3temperature"></p>
+              <p card-text id="day3wind"></p>
+              <p card-text id="day3humidity"></p>
             </div>
             <!-- Day 4 -->
-            <div class="col-2 bg-secondary m-2">
-              <p id="day4date" class="font-weight-bold"></p>
+            <div class="col-2 card-body bg-secondary m-2">
+              <p card-text id="day4date" class="font-weight-bold"></p>
               <img id="imgday4" />
-              <p id="day4temperature"></p>
-              <p id="day4wind"></p>
-              <p id="day4humidity"></p>
+              <p card-text id="day4temperature"></p>
+              <p card-text id="day4wind"></p>
+              <p card-text id="day4humidity"></p>
             </div>
             <!-- Day 5 -->
-            <div class="col-2 bg-secondary m-2">
-              <p id="day5date" class="font-weight-bold"></p>
+            <div class="col-2 card-body bg-secondary m-2">
+              <p card-text id="day5date" class="font-weight-bold"></p>
               <img id="imgday5" />
-              <p id="day5temperature"></p>
-              <p id="day5wind"></p>
-              <p id="day5humidity"></p>
+              <p card-text id="day5temperature"></p>
+              <p card-text id="day5wind"></p>
+              <p card-text id="day5humidity"></p>
             </div>
           </div>
         </div>
