Changes background of search area from primary to light, changes classes of buttons to btn primary to display blue, adds margin on bottom of search input area for space between button

--- a/index.html
+++ b/index.html
@@ -31,19 +31,20 @@
     <div class="container-fluid">
       <div class="row">
         <!-- Area to search for city and show previous cities -->
-        <div class="col-3 bg-primary">
+        <div class="col-3 bg-light">
           <h5 class="mt-2">Search for a City:</h5>
           <div class="mb-2">
             <input
               id="search-city"
               type="text"
+              class="mb-1"
               placeholder="Search for a city"
             />
             <div>
-              <button id="search-button" type="button">Search</button>
+              <button id="search-button" type="button" class="btn btn-primary">Search</button>
             </div>
           </div>
-          <button id="clear-history-btn" type="button">Clear history</button>
+          <button id="clear-history-btn" type="button" class="btn btn-primary">Clear history</button>
           <form id="past-cities"></form>
         </div>
 
