Moves clear history button element to bottom of past city list and adds margins on top and bottom

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
               <button id="search-button" type="button" class="btn btn-primary">Search</button>
             </div>
           </div>
+          <form id="past-cities" class="mt-1 mb-1"></form>
           <button id="clear-history-btn" type="button" class="btn btn-primary">Clear history</button>
-          <form id="past-cities"></form>
+        
         </div>
 
         <div class="col-9">
