--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <!-- Area for selected city weather info -->
           <div>
             <div>
-              <div class="card col-11 d-none" id="today">
+              <div class="card col-11 border-dark mt-3 mb-3 d-none" id="today">
                 <div class="card-body" id="todays-weather">
                   <h2 id="current-city"></h2>
                   <p id="current-date" class="font-weight-bold"></p>
@@ -74,8 +74,9 @@
           </div>
 
         
-          <!-- Day 1 -->
+          
           <div class="row d-none" id="5boxes">
+            <!-- Day 1 -->
             <div class="col-2 card-body bg-secondary m-2">
               <p card-text id="day1date" class="font-weight-bold"></p>
               <img id="imgday1" />
